syntax = "proto3";

package uspb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/uspb";

message User {
  string                    username          = 1;
  string                    full_name         = 2;
  string                    email             = 3;
  google.protobuf.Timestamp passwordChangedAt = 4;
  google.protobuf.Timestamp createdAt         = 5;
}